--- a/docs/pricing.mdx
+++ b/docs/pricing.mdx
@@ -1,5 +1,7 @@
 import PricingCalculator from './pricing/PricingCalculator'
 
-## Plans and Options
+# Plans and Options
 
 <PricingCalculator />
+
+> All plans include unmetered Logs, Metrics, Traces and Profiles. The only limits are the plan resources.
