--- a/docs/pricing.mdx
+++ b/docs/pricing.mdx
@@ -2,6 +2,7 @@ import PricingCalculator from './pricing/PricingCalculator'
 
 # Plans and Options
 
+> All plans include unmetered Logs, Metrics, Traces and Profiles. The only limit are the plan resources.
+
 <PricingCalculator />
 
-> All plans include unmetered Logs, Metrics, Traces and Profiles. The only limits are the plan resources.
