--- a/docs/pricing.mdx
+++ b/docs/pricing.mdx
@@ -1,3 +1,8 @@
+---
+pageType: custom
+sidebar: false
+---
+
 import PricingCalculator from './pricing/PricingCalculator'
 
 # Plans and Options
@@ -5,4 +10,3 @@ import PricingCalculator from './pricing/PricingCalculator'
 > All plans include unmetered Logs, Metrics, Traces and Profiles. The only limit are the plan resources.
 
 <PricingCalculator />
-
