--- a/docs/about.mdx
+++ b/docs/about.mdx
@@ -1,10 +1,10 @@
 ---
-sidebar: true
+sidebar: false
 outline: false
 ---
 
-## Polyglot Observability
+# Polyglot Observability
 
-> Unify logs, metrics, traces & eBPF in a single data layer.
+> Gigapipe unifies your logs, metrics, traces & eBPF in a single data layer
 
 Gigapipe is a Polyglot Observability platform drop-in compatible with Grafana Cloud and Opentelementry
