--- a/docs/pricing.mdx
+++ b/docs/pricing.mdx
@@ -5,8 +5,9 @@ outline: false
 
 import PricingCalculator from './pricing/PricingCalculator'
 
-# Plans and Options
+# Gigapipe Plans and Options
 
-> All plans include unmetered Logs, Metrics, Traces and Profiles. The only limit are the plan resources.
+> ⚡ All plans include unmetered Logs, Metrics, Traces and Profiles. The only limit are resources/storage.
+> 📊 All plans include an OSS Grafana instance preconfigured with all available datasources.
 
 <PricingCalculator />
