--- a/docs/pricing.mdx
+++ b/docs/pricing.mdx
@@ -7,7 +7,6 @@ import PricingCalculator from './pricing/PricingCalculator'
 
 # Gigapipe Plans and Options
 
-> ⚡ All plans include unmetered Logs, Metrics, Traces and Profiles. The only limit are resources/storage.<br>
-> 📊 All plans include an OSS Grafana instance preconfigured with all available datasources.
+> ⚡ All plans include unmetered Logs, Metrics, Traces and Profiles. The only limit are resources/storage.
 
 <PricingCalculator />
