--- a/docs/pricing.mdx
+++ b/docs/pricing.mdx
@@ -7,6 +7,8 @@ import PricingCalculator from './pricing/PricingCalculator'
 
 # Gigapipe Plans and Options
 
-> ⚡ All plans include unmetered Logs, Metrics, Traces and Profiles. The only limit are resources/storage.
+⚡ All plans include unmetered Logs, Metrics, Traces and Profiles. The only limit are resources/storage.
 
 <PricingCalculator />
+
+> Need a Custom Configuration or High-Availability? Contact Us
