--- a/docs/pricing.mdx
+++ b/docs/pricing.mdx
@@ -8,8 +8,8 @@ import PricingCalculator from './pricing/PricingCalculator'
 
 # Gigapipe Plans and Options
 
-⚡ All plans include unmetered Logs, Metrics, Traces and Profiles. The only limit are resources/storage.
+> ⚡ All plans include unmetered Logs, Metrics, Traces and Profiles. The only limit are resources/storage.
 
 <PricingCalculator />
 
-> Need a Custom Configuration or High-Availability? Contact Us
+> 🗨️ Need a Custom Configuration or High-Availability? [Contact our Team](https://docs.google.com/forms/d/e/1FAIpQLSeb_eMwgtpbOk0ejAVW7ihKAzkt0WKnLwCQFyHkIzl5DAU2ig/viewform)
