--- a/docs/pricing.mdx
+++ b/docs/pricing.mdx
@@ -1,7 +1,8 @@
 ---
 sidebar: false
 outline: false
-navbar: false
+navbar: true
+footer: false
 ---
 
 import PricingCalculator from './pricing/PricingCalculator'
