fix: social links

--- a/docs/pricing.mdx
+++ b/docs/pricing.mdx
@@ -3,6 +3,7 @@ sidebar: false
 outline: false
 navbar: true
 footer: false
+nextPage: false
 ---
 
 import PricingCalculator from './pricing/PricingCalculator'
