--- a/docs/about.mdx
+++ b/docs/about.mdx
@@ -5,6 +5,27 @@ outline: false
 
 # Polyglot Observability
 
-> Gigapipe unifies your logs, metrics, traces & eBPF in a single data layer
+> Polyglot comes from Greek _polyglōttos_, a combination of _poly_ -, meaning "many" or "multi" - and **glōtta** for "language.
 
-Gigapipe is a Polyglot Observability platform drop-in compatible with Grafana Cloud and Opentelementry
+Gigapipe is a Polyglot platform designed around the Observability standards the world already loves.
+
+* We speaks multiple languages:
+  * Loki API + LogQL
+  * Prometheus API + PromQL
+  * Tempo API + TempoQL
+  * Pyroscope API
+
+* We can ingests multiple formats:
+  * Opentelemetry
+  * Grafana LGTM
+  * Datadog
+  * Elastic
+  * Custom
+
+### Independence
+
+Our stack is compatible with many projects and products, without depending on any. Our compatible APIs are independently developed and opensource.
+
+### Speed and Reliability
+
+Our stack leverages the ClickHouse and DuckDB OLAP engines for storage and to provide fast analytics and scalable performance.
