--- a/docs/about.mdx
+++ b/docs/about.mdx
@@ -1,6 +1,17 @@
 ---
 sidebar: false
 outline: false
+
+features:
+  - title: 'Loki'
+    details: Query and Ingest using the LoglQL API
+    icon: 📦
+  - title: 'Prometheus'
+    details: Query and Ingest using the PromQL API
+    icon: 🎨
+  - title: 'Tempo'
+    details: Query and Ingest using the TmepoQL API
+    icon: 🚀
 ---
 
 # Polyglot Observability
@@ -29,3 +40,6 @@ Our stack is compatible with many projects and products, without depending on an
 ### Speed and Reliability
 
 Our stack leverages the ClickHouse and DuckDB OLAP engines for storage and to provide fast analytics and scalable performance.
+
+### Features
+
