--- a/docs/about.mdx
+++ b/docs/about.mdx
@@ -1,18 +1,9 @@
 ---
 sidebar: false
 outline: false
-
-features:
-  - title: 'Loki'
-    details: Query and Ingest using the LoglQL API
-    icon: 📦
-  - title: 'Prometheus'
-    details: Query and Ingest using the PromQL API
-    icon: 🎨
-  - title: 'Tempo'
-    details: Query and Ingest using the TmepoQL API
-    icon: 🚀
 ---
+
+import { Steps } from '@theme';
 
 # Polyglot Observability
 
@@ -43,3 +34,12 @@ Our stack leverages the ClickHouse and DuckDB OLAP engines for storage and to pr
 
 ### Features
 
+<Steps>
+      ### Step 1
+
+      Body for Step 1.
+
+      ### Step 2
+
+      > Body for Step 2.
+    </Steps>
