--- a/docs/about.mdx
+++ b/docs/about.mdx
@@ -3,26 +3,30 @@ sidebar: false
 outline: false
 ---
 
-import { Steps } from '@theme';
+import { Steps, Badge } from '@theme';
 
 # Polyglot Observability
 
 > Polyglot comes from Greek _polyglōttos_, a combination of _poly_ -, meaning "many" or "multi" - and **glōtta** for "language.
 
-Gigapipe is a Polyglot platform designed around the Observability standards the world already loves.
+Gigapipe is a Polyglot platform designed around the Observability standards the world already loves 💜
 
-* We speaks multiple languages:
-  * Loki API + LogQL
-  * Prometheus API + PromQL
-  * Tempo API + TempoQL
-  * Pyroscope API
+<Steps>
+### Step 1
 
-* We can ingests multiple formats:
-  * Opentelemetry
-  * Grafana LGTM
-  * Datadog
-  * Elastic
-  * Custom
+Ingest using Opentelemetry or any of the qryn supported APIs and Agents.<br>
+<Badge text="OTEL Collector" type="info" /><Badge text="Alloy" type="info" /><Badge text="Vector" type="info" /><Badge text="..." type="warning" />
+
+### Step 2
+
+Query your Observability using LogQL, PromQL, Tempo and Pyroscope.<br>
+<Badge text="LogQL" type="info" /><Badge text="PromQL" type="info" /><Badge text="TempoQL" type="info" /><Badge text="Pyroscope" type="info" /><Badge text="..." type="warning" />
+
+### Step 3
+
+Build Widgets, Dashboards and Alerts in Grafana without any plugin.<br>
+
+</Steps>
 
 ### Independence
 
@@ -32,14 +36,4 @@ Our stack is compatible with many projects and products, without depending on an
 
 Our stack leverages the ClickHouse and DuckDB OLAP engines for storage and to provide fast analytics and scalable performance.
 
-### Features
 
-<Steps>
-      ### Step 1
-
-      Body for Step 1.
-
-      ### Step 2
-
-      > Body for Step 2.
-    </Steps>
