--- a/docs/about.mdx
+++ b/docs/about.mdx
@@ -11,23 +11,6 @@ import { Steps, Badge } from '@theme';
 
 Gigapipe is a Polyglot platform designed around the Observability standards the world already loves 💜
 
-<Steps>
-      ### Step 1
-
-      Ingest using Opentelemetry or any of the qryn supported APIs and Agents.<br>
-      <Badge text="OTEL Collector" type="info" /><Badge text="Alloy" type="info" /><Badge text="Vector" type="info" /><Badge text="..." type="warning" />
-
-      ### Step 2
-
-      Query your Observability using LogQL, PromQL, Tempo and Pyroscope.<br>
-      <Badge text="LogQL" type="info" /><Badge text="PromQL" type="info" /><Badge text="TempoQL" type="info" /><Badge text="Pyroscope" type="info" /><Badge text="..." type="warning" />
-
-      ### Step 3
-
-      Build Widgets, Dashboards and Alerts in Grafana without any plugin.<br>
-      
-</Steps>
-
 ### Independence
 
 Our stack is compatible with many projects and products, without depending on any. Our compatible APIs are independently developed and opensource.
@@ -36,4 +19,19 @@ Our stack is compatible with many projects and products, without depending on an
 
 Our stack leverages the ClickHouse and DuckDB OLAP engines for storage and to provide fast analytics and scalable performance.
 
+### Get Started
 
+<Steps>
+      ### Step 1
+
+      Ingest using Opentelemetry or any of the qryn supported APIs and Agents.<br>
+
+      ### Step 2
+
+      Query your Observability using LogQL, PromQL, Tempo and Pyroscope.<br>
+
+      ### Step 3
+
+      Build Widgets, Dashboards and Alerts in Grafana without any plugin.<br>
+      
+</Steps>
