--- a/docs/about.mdx
+++ b/docs/about.mdx
@@ -3,7 +3,7 @@ sidebar: false
 outline: false
 ---
 
-import { Steps, Badge } from '@theme';
+import { Steps } from '@theme';
 
 # Polyglot Observability
 
