--- a/docs/about.mdx
+++ b/docs/about.mdx
@@ -5,9 +5,11 @@ outline: false
 
 # Polyglot Observability
 
-> Polyglot comes from Greek _polyglōttos_, a combination of _poly_ -, meaning "many" or "multi" - and **glōtta** for "language.
+### What does Polyglot mean?
 
-Gigapipe is a Polyglot platform designed around the Observability standards the world already loves 💜
+> Polyglot comes from Greek _polyglōttos_, a combination of _poly_ - "many" or "multi" - and **glōtta** = "language.
+
+That's us. Gigapipe is a Polyglot platform designed around the Observability standards the world already loves 💜
 
 ### Independence
 
