--- a/docs/about.mdx
+++ b/docs/about.mdx
@@ -9,12 +9,12 @@ outline: false
 
 > Polyglot comes from Greek _polyglōttos_, a combination of _poly_ - "many" or "multi" - and **glōtta** = "language.
 
-That's us. Gigapipe is a Polyglot platform designed around the Observability standards the world already loves 💜
+_That's us_. Gigapipe is a Polyglot platform designed around the Observability standards the world already loves 💜
 
 ### Independence
 
-Our stack is compatible with many projects and products, without depending on any. Our compatible APIs are independently developed and opensource.
+Our stack is _protocol_ compatible with many projects and products, without depending on any. Our compatible APIs are independently developed and _fully opensource_. 
 
 ### Speed and Reliability
 
-Our stack leverages the ClickHouse and DuckDB OLAP engines for storage and to provide fast analytics and scalable performance.
+Our stack leverages the ClickHouse and DuckDB OLAP engines for storage and to provide fast analytics and scalable performance. We develop our extensions standing on the shoulders of giants.
