--- a/docs/about.mdx
+++ b/docs/about.mdx
@@ -3,7 +3,7 @@ sidebar: false
 outline: false
 ---
 
-# Polyglot Observability
+# <img src="https://raw.githubusercontent.com/gigapipehq/homepage/refs/heads/main/docs/public/qryn.png" width="30px"/> Polyglot Observability
 
 ### What does Polyglot mean?
 
