--- a/docs/about.mdx
+++ b/docs/about.mdx
@@ -5,7 +5,7 @@ outline: false
 
 # <img src="https://raw.githubusercontent.com/gigapipehq/homepage/refs/heads/main/docs/public/qryn.png" width="30px"/> Polyglot Observability
 
-### What does Polyglot mean?
+##### What does _"Polyglot"_ mean?
 
 > Polyglot comes from Greek _polyglōttos_, a combination of _poly_ - "many" or "multi" - and **glōtta** = "language.
 
