--- a/docs/about.mdx
+++ b/docs/about.mdx
@@ -3,18 +3,16 @@ sidebar: false
 outline: false
 ---
 
-# <img src="https://raw.githubusercontent.com/gigapipehq/homepage/refs/heads/main/docs/public/qryn.png" width="30px"/>Polyglot Observability
+# Polyglot Observability
 
-##### What does _"Polyglot"_ mean?
-
-> Polyglot comes from Greek _polyglōttos_, a combination of _poly_ - "many" or "multi" - and **glōtta** = "language.
+> Polyglot comes from Greek _polyglōttos_, a combination of **poly** - _"many" or "multi"_ - and **glōtta** for _"language_.
 
 _That's us_. Gigapipe is a Polyglot platform designed around the Observability standards the world already loves 💜
 
 ### Independence
 
-Our stack is _protocol_ compatible with many projects and products, without depending on any. Our compatible APIs are independently developed and _fully opensource_. 
+Our stack is _protocol compatible_ with many projects and products - _without depending on any_. Our compatible APIs are independently developed and _fully opensource_.<br>
 
-### Speed and Reliability
+### Performance and Reliability
 
-Our stack leverages the ClickHouse and DuckDB OLAP engines for storage and to provide fast analytics and scalable performance. We develop our extensions standing on the shoulders of giants.
+Our stack leverages the **ClickHouse** and **DuckDB** OLAP engines for storage and to provide fast analytics and scalable performance. We develop our extensions standing on the shoulders of giants.
