--- a/docs/about.mdx
+++ b/docs/about.mdx
@@ -11,7 +11,7 @@ _That's us_. Gigapipe is a Polyglot platform designed around the Observability s
 
 ### Independence
 
-Our stack is _protocol compatible_ with many projects and products - _without depending on any_. Our compatible APIs are independently developed and _fully opensource_.<br>
+Our stack is _protocol compatible_ with many projects and products - _without depending on any_. Our Core and APIs are independently developed and _fully opensource_.
 
 ### Performance and Reliability
 
