--- a/docs/about.mdx
+++ b/docs/about.mdx
@@ -13,6 +13,12 @@ _That's us_. Gigapipe is a Polyglot platform designed around the Observability s
 
 Our stack is _protocol compatible_ with many projects and products - _without depending on any_. Our Core and APIs are independently developed and _fully opensource_.
 
-### Performance and Reliability
+### Solid Performance
 
 Our stack leverages the **ClickHouse** and **DuckDB** OLAP engines for storage and to provide fast analytics and scalable performance. We develop our extensions standing on the shoulders of giants.
+
+### Cloud Alternative
+
+Our prices are different because we are different - and so are our dedicated hosting and VPS partners. _You can still deploy our stack on AWS, if you want to!_
+
+<img src="compliance.png" alt="hosting compliance and certifications">
