--- a/docs/about.mdx
+++ b/docs/about.mdx
@@ -3,20 +3,20 @@ sidebar: false
 outline: false
 ---
 
-# Polyglot Observability
+# 💜 Polyglot Observability
 
 > Polyglot comes from Greek _polyglōttos_, a combination of **poly** - _"many" or "multi"_ - and **glōtta** for _"language_.
 
 _That's us_. Gigapipe is a Polyglot platform designed around the Observability standards the world already loves 💜
 
-### Independence
+### 💎 Independence
 
-Our stack is _protocol compatible_ with many projects and products - _without depending on any_. Our Core and APIs are independently developed and _fully opensource_.
+Our stack is _protocol compatible_ with many projects and products - _without depending on any_. Our stack and APIs are developed from scratch and _fully opensource_.
 
-### Solid Performance
+### ⚡ Solid Performance
 
 Our stack leverages the **ClickHouse** and **DuckDB** OLAP engines for storage and to provide fast analytics and scalable performance. We develop our extensions standing on the shoulders of giants.
 
-### Cloud Alternative
+### 🍖 Underdog-ness
 
-Our prices are different because we are different - and so are our dedicated hosting and VPS partners. _You can still deploy our stack on AWS, if you want to!_
+Our prices are different because we are different - and so are our dedicated hosting and VPS partners. _You can still deploy our stack on AWS, if you really want to!_
