--- a/docs/about.mdx
+++ b/docs/about.mdx
@@ -20,3 +20,7 @@ Our stack leverages the **ClickHouse** and **DuckDB** OLAP engines for storage a
 ### 🍖 Underdog-ness
 
 Our prices are different because we are different - and so are our dedicated hosting and VPS partners. _You can still deploy our stack on AWS, if you really want to!_
+
+### ⚖️ Compliance 
+
+![](compliance.png)
