--- a/docs/about.mdx
+++ b/docs/about.mdx
@@ -23,4 +23,4 @@ Our prices are different because we are different - and so are our dedicated hos
 
 ### ⚖️ Compliance 
 
-![](compliance.png)
+![](./public/compliance.png)
