--- a/docs/signup.mdx
+++ b/docs/signup.mdx
@@ -10,10 +10,8 @@ import EarlyAccessForm from './signup/EarlyAccessForm'
 
 # Request Early Access to Our Platform
 
-We're excited to offer early access to our platform! Fill out the form below to request access to our closed beta.
+We're excited to offer early access to Gigapipe! Fill out the form below to request an account.
 
 <EarlyAccessForm />
-
-Thank you for your interest in our platform. We'll review your request and get back to you soon!
 
 > 🗨️ Urgent Activation Request? [Contact our Team](mailto:info@gigapipe.com)
