fix: folder structure

--- a/docs/pricing.mdx
+++ b/docs/pricing.mdx
@@ -6,7 +6,7 @@ footer: false
 nextPage: false
 ---
 
-import PricingCalculator from './pricing/PricingCalculator'
+import PricingCalculator from '../src/components/pricing/PricingCalculator'
 
 # Gigapipe Plans and Options
 
