--- a/docs/signup.mdx
+++ b/docs/signup.mdx
@@ -6,7 +6,7 @@ footer: false
 nextPage: false
 ---
 
-import EarlyAccessForm from './signup/EarlyAccessForm'
+import EarlyAccessForm from '../src/components/signup/EarlyAccessForm'
 
 # Request Early Access to Our Platform
 
