--- a/docs/about.mdx
+++ b/docs/about.mdx
@@ -11,15 +11,18 @@ _That's us_. Gigapipe is a Polyglot platform designed around the Observability s
 
 ### 💎 Independence
 
-Our stack is _protocol compatible_ with many projects and products - _without depending on any_. Our stack and APIs are developed from scratch and _fully opensource_.
+Our stack is _protocol compatible_ with many projects and products - _without depending on any_. <br/>
+Our stack and APIs are developed from scratch and _fully opensource_.
 
 ### ⚡ Solid Performance
 
-Our stack leverages the **ClickHouse** and **DuckDB** OLAP engines for storage and to provide fast analytics and scalable performance. We develop our extensions standing on the shoulders of giants.
+Our stack leverages the **ClickHouse** and **DuckDB** OLAP engines for storage, fast analytics and scalable performance. <br/>
+We develop our extensions standing on the shoulders of giants.
 
 ### 🍖 Underdog-ness
 
-Our prices are different because we are different - and so are our dedicated hosting and VPS partners. _You can still deploy our stack on AWS, if you really want to!_
+Our prices are different because we are different - and so are our dedicated hosting and VPS partners. <br/>
+_You can still deploy our stack on AWS, if you really want to!_
 
 ### ⚖️ Compliance 
 
