--- a/docs/signup.mdx
+++ b/docs/signup.mdx
@@ -8,8 +8,10 @@ nextPage: false
 
 import EarlyAccessForm from '../src/components/signup/EarlyAccessForm'
 
-# Request Early Access to Our Platform
+# Request Early Access to Gigapipe
+
+> In order to retain maximum service quality and avoid abuse we vet new activations
 
 <EarlyAccessForm />
 
-> 🗨️ Urgent Activation Request? [Contact our Team](mailto:info@gigapipe.com)
+> 🗨️ Urgent Activation Request? [Contact our Team](mailto:info@gigapipe.com) for Express Intakes
