--- a/docs/legal/index.mdx
+++ b/docs/legal/index.mdx
@@ -1,10 +1,14 @@
-# General Services Agreement
+# Gigapipe Legal Terms
+
+## General Services Agreement
 
 This Terms of Service Agreement ("TOS") shall constitute a binding contractual agreement between Gigapipe BV ("Gigapipe"), and the subscriber of services ("Customer"). This TOS shall include the Terms of Service ("TOS"), Acceptable Use Policy ("AUP"), Service Level Agreement ("SLA"), and any applicable addendum. Customer agrees to be bound to all agreements in this TOS.
 
 Note: Gigapipe reserves the right to supplement and/or amend, at any time, the terms and conditions of its TOS, including the TOS, AUP, SLA, and any applicable addendum. Gigapipe will notify its Customers through the Client Area of any changes affecting cancellation, payment of fees, or the SLA. It is the Customer’s responsibility to review Gigapipe’s policies on a frequent basis to ensure compliance because the TOS in place during your most current month applies, not the TOS which was in place when you registered. Changes requested by Customer to any of these agreements or to the TOS must be agreed to in writing by Gigapipe.
 
-### Customer agrees to the following Terms of Service, (“TOS”):
+### Terms of Service Agreement ("TOS")
+
+Customer agrees to the following Terms of Service, (“TOS”):
 
 1. VPS/Cloud Hosting Services: During the term of this TOS, Gigapipe will provide certain virtual private server and cloud hosting services (the “VPS/Cloud Hosting Services”) to Customer as ordered by Customer and agreed to by the parties as part of the online Customer order process at https://www.gigapipe.com.
 
@@ -74,17 +78,17 @@ Note: Gigapipe reserves the right to supplement and/or amend, at any time, the t
 
 The Service Level Agreement, “SLA” is incorporated into the TOS and applicable to all services delivered directly to Customers of Gigapipe. The SLA is not applicable to unrelated third parties or third parties lacking privity of contract with Gigapipe. The uptime guarantees and the resulting SLA Credit(s) are applied in monthly terms unless specified otherwise. To ensure that Gigapipe is providing optimal services to its Customers, Gigapipe is required to perform scheduled maintenance, from time to time, on the network, client area, and hardware. Any downtime resulting from any such scheduled maintenance or any event of Force Majeure does not qualify for SLA Credit(s). All SLA guarantees and information listed below are made in good faith and are subject to standard contract remedies. Note: SLA Credits for Hourly Services will be calculated and applied based on the same monthly calculation used for the month-to-month contracts.
 
-#### SLA Credit Claim
+1. SLA Credit Claim
 To properly claim an SLA Credit due, the Customer’s master administrative user must open an SLA ticket with the Billing Department located inside the Client Area at https://www,gigapipe.com/manage within seven (“7”) days of the purported outage. Customer must include service type, IP Address, contact information, and full description of the service interruption including logs, if applicable. The SLA claim will be researched by the appropriate Gigapipe department manager and any credit issued will be issued to accounting and the ticket will be updated. SLA Credits are issued as service credits on future billing cycles. SLA Credits shall not be bartered or traded with other Gigapipe customers. Please allow up to fourteen (“14”) days for the process of SLA claims. Customer acknowledges that the maximum amount of SLA Credit that may be used for any particular month cannot exceed the total monthly service fee amount for such month.
 
-#### SLA Claim Fault
+2. SLA Claim Fault
 Customers currently in arrears for monthly services do not qualify for SLA claims. Customers who have been in payment arrears three (“3”) or more times in the previous twelve (“12”) months do not qualify for SLA claims. Valid SLA claims will not be credited to the Customer’s accounts until all abuse issues are resolved. Any Customer making false or repetitive claims will incur a one-time charge of fifty dollars (“$50”) per incident for such claims. False or repetitive claims are also a violation of the TOS and may be subject to service suspension. Customers participating in malicious or aggressive Internet activities, thereby causing attacks or counter-attacks, do not qualify for SLA claims and shall be deemed in violation of the AUP.
 
-#### Public Network
+3. Public Network
 Gigapipe and Data Center guarantees one hundred percent (“100%”) uptime on all Public Network services to Customers located in Data Center, subject to the provisions of this SLA. Except for service downtimes resulting from Customer’s fault, and provided Customer follows the proper procedures for service credit claims as set forth in this SLA, for each continuous, uninterrupted thirty (“30”) minute interval of Public Network service downtime that Customer experiences during an applicable month, Gigapipe agrees to grant to Customer a SLA Credit equal to five percent (“5%”) of the Customer’s monthly service fees for that month. Public Network service downtimes of less than thirty (“30”) continuous, uninterrupted minutes do not qualify for this service credit, and the Customer cannot combine or augment Public Network or other service-related downtimes to satisfy such downtime requirement. All Public Network services include redundant carrier grade internet backbone connections.
 
-#### Client Area
+4. Client Area
 Gigapipe guarantees one hundred percent (“100%”) access to the online client management area, subject to the provisions of this SLA. Except for service downtimes resulting from Customer’s fault, and provided Customer follows the proper procedures for service credit claims as set forth in this SLA, for each continuous, uninterrupted thirty (“30”) minute interval of online client management area service downtime that Customer experiences during an applicable month, Gigapipe agrees to grant to Customer a SLA Credit equal to five percent (“5%”) of the Customer’s monthly service fees for that month. Online client management area service downtimes of less than thirty (“30”) continuous, uninterrupted minutes do not qualify for this service credit, and the Customer cannot combine or augment online client management area or other service-related downtimes to satisfy such downtime requirement. Access to the client area is available via the Public Network. The client area is utilized to fully manage the on-demand IT environments located within the Gigapipe data centers. Client area access includes ticket access, account management and other related services.
 
-#### Redundant Infrastructure
+5. Redundant Infrastructure
 Gigapipe guarantees one hundred percent (“100%”) uptime on the power and HVAC services to Customers located in Data Center, subject to the provisions of this SLA. All computer equipment and related services are served by redundant UPS power units with backup onsite diesel generators. Except for service downtimes resulting from Customer’s fault, and provided Customer follows the proper procedures for service credit claims as set forth in this SLA, for each continuous, uninterrupted thirty (“30”) minute interval of power and HVAC service downtime that Customer experiences during an applicable month, Gigapipe agrees to grant to Customer a SLA Credit equal to five percent (“5%”) of the Customer’s monthly service fees for that month. Power and HVAC service downtimes of less than thirty (“30”) continuous, uninterrupted minutes do not qualify for this service credit, and the  Customer cannot combine or augment power and HVAC or other service-related downtimes to satisfy such downtime requirement.
