--- a/docs/legal/index.mdx
+++ b/docs/legal/index.mdx
@@ -2,7 +2,7 @@
 
 ## General Services Agreement
 
-This Terms of Service Agreement ("TOS") shall constitute a binding contractual agreement between Gigapipe BV ("Gigapipe"), and the subscriber of services ("Customer"). This TOS shall include the Terms of Service ("TOS"), Acceptable Use Policy ("AUP"), Service Level Agreement ("SLA"), and any applicable addendum. Customer agrees to be bound to all agreements in this TOS.
+This Terms of Service Agreement ("TOS") shall constitute a binding contractual agreement between HEPvest Holding BV ("Gigapipe"), and the subscriber of services ("Customer"). This TOS shall include the Terms of Service ("TOS"), Acceptable Use Policy ("AUP"), Service Level Agreement ("SLA"), and any applicable addendum. Customer agrees to be bound to all agreements in this TOS.
 
 Note: Gigapipe reserves the right to supplement and/or amend, at any time, the terms and conditions of its TOS, including the TOS, AUP, SLA, and any applicable addendum. Gigapipe will notify its Customers through the Client Area of any changes affecting cancellation, payment of fees, or the SLA. It is the Customer’s responsibility to review Gigapipe’s policies on a frequent basis to ensure compliance because the TOS in place during your most current month applies, not the TOS which was in place when you registered. Changes requested by Customer to any of these agreements or to the TOS must be agreed to in writing by Gigapipe.
 
