--- a/docs/about.mdx
+++ b/docs/about.mdx
@@ -9,6 +9,12 @@ outline: false
 
 _That's us_. Gigapipe is a Polyglot platform designed around the Observability standards the world already loves 💜
 
+Why did we design Gigapipe? Our design principles are very simple:
+
+* We don't like metered solutions. Our plans are unlimited.
+* We don't like dynamic pricing. Our service costs are fixed.
+* We don't like vendor lock-ins. Our platform speaks freely.
+
 ### 💎 Independence
 
 Our stack is _protocol compatible_ with many projects and products - _without depending on any_. <br/>
