--- a/docs/about.mdx
+++ b/docs/about.mdx
@@ -9,11 +9,17 @@ outline: false
 
 _That's us_. Gigapipe is a Polyglot platform designed around the Observability standards the world already loves 💜
 
-Why did we design Gigapipe? Our design principles are very simple:
+<br/>
+
+### Why did we create Gigapipe? 
+
+Our product principles and core values are simple:
 
 * We don't like metered solutions. Our plans are unlimited.
-* We don't like dynamic pricing. Our service costs are fixed.
+* We don't like dynamic pricing. Our service cost is fixed.
 * We don't like vendor lock-ins. Our platform speaks freely.
+
+_We wanted an all-in-one Observability solution for ourselves, so we made one for everyone._
 
 ### 💎 Independence
 
@@ -27,8 +33,8 @@ We develop our extensions standing on the shoulders of giants.
 
 ### 🍖 Underdog-ness
 
-Our prices are different because we are different - and so are our dedicated hosting and VPS partners. <br/>
-_You can still deploy our stack on AWS, if you really want to!_
+Our pricing model is different because we are different - and so are our amazing dedicated hosting and VPS partners. <br/>
+We don't run on AWS. We are not VC controlled. We are born and made in EU - by humans for humans.
 
 ### ⚖️ Compliance 
 
