--- a/docs/about.mdx
+++ b/docs/about.mdx
@@ -11,25 +11,25 @@ _That's us_. Gigapipe is a Polyglot platform designed around the Observability s
 
 <br/>
 
-### Why did we create Gigapipe? 
+### ☝️ Why did we launch Gigapipe? 
 
-Our product principles and core values are simple:
+Our product values and design principles are simple:
 
-* We don't like metered solutions. Our plans are unlimited.
-* We don't like dynamic pricing. Our service cost is fixed.
-* We don't like vendor lock-ins. Our platform speaks freely.
+✔️ We don't like metered solutions. Our plans are unlimited.<br/>
+✔️ We don't like dynamic pricing. Our service cost is fixed.<br/>
+✔️ We don't like vendor lock-ins. Our platform speaks freely.
 
-_We wanted an all-in-one Observability solution for ourselves, so we made one for everyone._
+> _We wanted a powerful all-in-one Observability solution for ourselves, so we made one for everybody._
 
 ### 💎 Independence
 
 Our stack is _protocol compatible_ with many projects and products - _without depending on any_. <br/>
-Our stack and APIs are developed from scratch and _fully opensource_.
+Our core engine and APIs are all developed from scratch _("clear room")_ and _completely opensource_.
 
 ### ⚡ Solid Performance
 
 Our stack leverages the **ClickHouse** and **DuckDB** OLAP engines for storage, fast analytics and scalable performance. <br/>
-We develop our extensions standing on the shoulders of giants.
+We develop our data engines and database extensions standing on the shoulders of giants.
 
 ### 🍖 Underdog-ness
 
