--- a/docs/docs/index.mdx
+++ b/docs/docs/index.mdx
@@ -4,7 +4,7 @@ import { PackageManagerTabs } from '@theme';
 
 Gigapipe provides you with a managed Observability stack - _just bring your own data_.
 
-:::tip
+:::warning REQUIREMENTS
 Your Gigapipe account must be activated before proceeding
 :::
 
