--- a/docs/docs/index.mdx
+++ b/docs/docs/index.mdx
@@ -10,6 +10,16 @@ Your Gigapipe account must be activated before proceeding
 
 ## Installation
 
+<Steps>
+      ### Step 1
+
+      Body for Step 1.
+
+      ### Step 2
+
+      Body for Step 2.
+</Steps>
+
 ### `sources` object
 
 `@rspack/core` exports the [webpack-sources](https://github.com/webpack/webpack-sources) module through `sources`. It provides a set of classes for creating and manipulating source code fragments and source maps. When developing Rspack plugins, you can use these classes to handle and manipulate source code.
