--- a/docs/docs/index.mdx
+++ b/docs/docs/index.mdx
@@ -3,25 +3,31 @@ import { Steps } from '@theme';
 
 # Get Started
 
-Gigapipe provides you with a managed Observability stack - _just bring your own data_.
-
 :::warning REQUIREMENTS
 Your Gigapipe account must be activated before proceeding
 :::
 
-## Installation
+Gigapipe provides you with a managed Observability stack - _just bring your own data_.
 
 <Steps>
       ### Step 1
 
-      Body for Step 1.
+      Access your Gigapipe account and generate a new `auth token` to write data
 
       ### Step 2
 
-      Body for Step 2.
+      Configure your Observability Agent to send Logs, Metrics and Traces to Gigapipe
+
+      ### Step 3
+
+      Access your included Grafana instance to Search and Explore your fresh data.
+
+      ### Step 4
+
+      Sky is the limit. Any example from Grafana Cloud should work as-is in Gigapipe.
 </Steps>
 
-### `sources` object
+### Supported Agents
 
 `@rspack/core` exports the [webpack-sources](https://github.com/webpack/webpack-sources) module through `sources`. It provides a set of classes for creating and manipulating source code fragments and source maps. When developing Rspack plugins, you can use these classes to handle and manipulate source code.
 
