--- a/docs/docs/index.mdx
+++ b/docs/docs/index.mdx
@@ -14,6 +14,8 @@ Gigapipe provides you with a managed Observability stack - _just bring your own 
 
       Access your Gigapipe account and generate a new `auth token` to write data
 
+      <img src="https://i.imgur.com/zzmufhk.png" />
+
       ### Step 2
 
       Configure your Observability Agent to send Logs, Metrics and Traces to Gigapipe
