--- a/docs/docs/index.mdx
+++ b/docs/docs/index.mdx
@@ -12,7 +12,7 @@ Gigapipe provides you with a managed Observability stack - _just bring your own 
 <Steps>
       ### Step 1
 
-      Access your Gigapipe account and generate a new `auth token` to write data
+      Access your Gigapipe account and generate a `scoped token` to read/write data
 
       <img src="https://i.imgur.com/zzmufhk.png" />
 
@@ -20,9 +20,13 @@ Gigapipe provides you with a managed Observability stack - _just bring your own 
 
       Configure your Observability Agent to send Logs, Metrics and Traces to Gigapipe
 
+      <img src="https://i.imgur.com/w2w7eEC.png" />
+
       ### Step 3
 
-      Access your included Grafana instance to Search and Explore your fresh data.
+      Access your Grafana instance, connect the Datasource and Explore your data.
+
+      <img src="https://i.imgur.com/3ENjPX8.png" />
 
       ### Step 4
 
