--- a/docs/docs/index.mdx
+++ b/docs/docs/index.mdx
@@ -20,8 +20,6 @@ Gigapipe provides you with a managed Observability stack - _just bring your own 
 
       Configure your Observability Agent to send Logs, Metrics and Traces to Gigapipe
 
-      <img src="https://i.imgur.com/w2w7eEC.png" />
-
       ### Step 3
 
       Access your Grafana instance, connect the Datasource and Explore your data.
@@ -31,6 +29,10 @@ Gigapipe provides you with a managed Observability stack - _just bring your own 
       ### Step 4
 
       Sky is the limit. Any example from Grafana Cloud should work as-is in Gigapipe.
+
+[arcade-loki](https://demo.arcade.software/GKaq4SJRBPYyCZgoWBoM?embed ':include :type=iframe width=100% height=550px border=0')
+
+
 </Steps>
 
 ### Supported Agents
