--- a/docs/docs/index.mdx
+++ b/docs/docs/index.mdx
@@ -3,8 +3,7 @@ import { Steps } from '@theme';
 
 # Get Started
 
-:::warning REQUIREMENTS
-Your Gigapipe account must be activated before proceeding
+:::warning ACTIVATE BEFORE PROCEEDING
 :::
 
 Gigapipe provides you with a managed Observability stack - _just bring your own data_.
@@ -30,9 +29,6 @@ Gigapipe provides you with a managed Observability stack - _just bring your own 
 
       Sky is the limit. Any example from Grafana Cloud should work as-is in Gigapipe.
 
-[arcade-loki](https://demo.arcade.software/GKaq4SJRBPYyCZgoWBoM?embed ':include :type=iframe width=100% height=550px border=0')
-
-
 </Steps>
 
 ### Supported Agents
@@ -47,3 +43,8 @@ const source = new RawSource('console.log("Hello, world!");');
 ```
 
 For detailed usage, please refer to the [webpack-sources](https://github.com/webpack/webpack-sources) documentation.
+
+
+### Explore Logs
+
+<div style="position: relative; padding-bottom: calc(65.88983050847457% + 41px); height: 0; width: 100%;"><iframe src="https://demo.arcade.software/GKaq4SJRBPYyCZgoWBoM?embed&embed_mobile=inline&embed_desktop=inline&show_copy_link=true" title="Explore - Loki - Grafana" frameborder="0" loading="lazy" webkitallowfullscreen mozallowfullscreen allowfullscreen allow="clipboard-write" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; color-scheme: light;" ></iframe></div>
