--- a/docs/docs/index.mdx
+++ b/docs/docs/index.mdx
@@ -3,7 +3,7 @@ import { Steps } from '@theme';
 
 # Get Started
 
-:::warning ACTIVATE BEFORE PROCEEDING
+:::warning Activate your Gigapipe Account before proceeding
 :::
 
 Gigapipe provides you with a managed Observability stack - _just bring your own data_.
