--- a/docs/docs/index.mdx
+++ b/docs/docs/index.mdx
@@ -21,7 +21,7 @@ Gigapipe provides you with a managed Observability stack - _just bring your own 
 
       ### Step 3
 
-      Access your Grafana instance, connect the Datasource and Explore your data.
+      Access Grafana, auto-connect the Datasources and start Exploring your data.
 
       <img src="https://i.imgur.com/3ENjPX8.png" />
 
