--- a/docs/docs/index.mdx
+++ b/docs/docs/index.mdx
@@ -21,15 +21,17 @@ Gigapipe provides you with a managed Observability stack - _just bring your own 
 
       ### Step 3
 
-      Access Grafana, auto-connect the Datasources and start Exploring your data.
+      Access Grafana to _auto-connect_ your Datasources and start Exploring your data
 
       <img src="https://i.imgur.com/3ENjPX8.png" />
 
       ### Step 4
 
-      Sky is the limit. Any example from Grafana Cloud should work as-is in Gigapipe.
+      Sky is the limit! Any example from Grafana Cloud should work as-is in Gigapipe.
 
 </Steps>
+
+<br/>
 
 ### Supported Agents
 
