--- a/docs/docs/index.mdx
+++ b/docs/docs/index.mdx
@@ -20,6 +20,39 @@ Gigapipe provides you with a managed Observability stack - _just bring your own 
       ### Step 2
 
       Configure your Observability Agent to send Logs, Metrics and Traces to Gigapipe
+      <Tabs>
+            <Tab label="Logs">
+            [Grafana Alloy](https://grafana.com/docs/alloy/latest/), 
+            [Grafana Agent](https://grafana.com/docs/agent/latest/), 
+            [Vector](https://vector.dev/), 
+            [Opentelemetry](https://github.com/metrico/otel-collector), 
+            [Logtail](https://docs.digitalocean.com/products/marketplace/catalog/logtail/), 
+            [Telegraf](https://www.influxdata.com/time-series-platform/telegraf/), 
+            [Fluentd](https://www.fluentd.org/), 
+            [Logstash](https://opensearch.org/docs/latest/tools/logstash/index/) 
+            or any Loki compatible client
+            </Tab>
+            <Tab label="Metrics">
+            [Grafana Alloy](https://grafana.com/docs/alloy/latest/), 
+            [Grafana Agent](https://grafana.com/docs/agent/latest/), 
+            [Vector](https://vector.dev/), 
+            [Opentelemetry](https://github.com/metrico/otel-collector), 
+            or any Prometheus compatible client
+            </Tab>
+            <Tab label="Traces">
+            [Grafana Alloy](https://grafana.com/docs/alloy/latest/), 
+            [Grafana Agent](https://grafana.com/docs/agent/latest/), 
+            [Zipkin](https://zipkin.io/), 
+            [Opentelemetry](https://github.com/metrico/otel-collector), 
+            eBPF Agent or any Tempo/Zipkin compatible client
+            </Tab>
+            <Tab label="Profiles">
+            [Grafana Pyroscope](https://grafana.com/docs/pyroscope/latest/configure-client/language-sdks/), 
+            [Grafana Agent](https://grafana.com/docs/pyroscope/latest/configure-client/grafana-agent/go_pull/) 
+            or any pprof compatible client
+            </Tab>
+      </Tabs>
+
 
       ### Step 3
 
@@ -35,22 +68,8 @@ Gigapipe provides you with a managed Observability stack - _just bring your own 
 
 <br/>
 
-### Supported Agents
 
-<Tabs>
-      <Tab label="Logs">
-      Grafana Alloy, Grafana Agent, Vector, Opentelemetry Collector, Logtail, Telegraf, Fluentd, Logstash or any Loki compatible client
-      </Tab>
-      <Tab label="Metrics">
-      Grafana Alloy, Vector, Telegraf, Opentelemetry Collector or any Prometheus compatible client
-      </Tab>
-      <Tab label="Traces">
-      Grafana Alloy, Vector, Opentelemetry Collector, eBPF Agent or any Tempo compatible client
-      </Tab>
-      <Tab label="Profiles">
-      Grafana Pyroscope or any pprof compatible client
-      </Tab>
-</Tabs>
+
 
 ### Custom
 
