--- a/docs/docs/index.mdx
+++ b/docs/docs/index.mdx
@@ -29,27 +29,27 @@ Gigapipe provides you with a managed Observability stack - _just bring your own 
             [Logtail](https://docs.digitalocean.com/products/marketplace/catalog/logtail/), 
             [Telegraf](https://www.influxdata.com/time-series-platform/telegraf/), 
             [Fluentd](https://www.fluentd.org/), 
-            [Logstash](https://opensearch.org/docs/latest/tools/logstash/index/) 
-            or any Loki compatible client
+            [Logstash](https://opensearch.org/docs/latest/tools/logstash/index/)
+            <br/>⭐ Any Loki compatible client
             </Tab>
             <Tab label="Metrics">
             [Grafana Alloy](https://grafana.com/docs/alloy/latest/), 
             [Grafana Agent](https://grafana.com/docs/agent/latest/), 
             [Vector](https://vector.dev/), 
-            [Opentelemetry](https://github.com/metrico/otel-collector), 
-            or any Prometheus compatible client
+            [Opentelemetry](https://github.com/metrico/otel-collector)
+            <br/>⭐ Any Prometheus compatible client
             </Tab>
             <Tab label="Traces">
             [Grafana Alloy](https://grafana.com/docs/alloy/latest/), 
             [Grafana Agent](https://grafana.com/docs/agent/latest/), 
             [Zipkin](https://zipkin.io/), 
-            [Opentelemetry](https://github.com/metrico/otel-collector), 
-            eBPF Agent or any Tempo/Zipkin compatible client
+            [Opentelemetry](https://github.com/metrico/otel-collector)
+            <br/>⭐ Any Tempo/Zipkin compatible client
             </Tab>
             <Tab label="Profiles">
             [Grafana Pyroscope](https://grafana.com/docs/pyroscope/latest/configure-client/language-sdks/), 
             [Grafana Agent](https://grafana.com/docs/pyroscope/latest/configure-client/grafana-agent/go_pull/) 
-            or any pprof compatible client
+            <br/>⭐ Any pprof compatible client
             </Tab>
       </Tabs>
 
