--- a/docs/docs/index.mdx
+++ b/docs/docs/index.mdx
@@ -22,6 +22,7 @@ Gigapipe provides you with a managed Observability stack - _just bring your own 
       Configure your Observability Agent to send Logs, Metrics and Traces to Gigapipe
       <Tabs>
             <Tab label="Logs">
+            ⭐ Any Loki compatible Agent <br/>
             [Grafana Alloy](https://grafana.com/docs/alloy/latest/), 
             [Grafana Agent](https://grafana.com/docs/agent/latest/), 
             [Vector](https://vector.dev/), 
@@ -30,26 +31,29 @@ Gigapipe provides you with a managed Observability stack - _just bring your own 
             [Telegraf](https://www.influxdata.com/time-series-platform/telegraf/), 
             [Fluentd](https://www.fluentd.org/), 
             [Logstash](https://opensearch.org/docs/latest/tools/logstash/index/)
-            <br/>⭐ Any Loki compatible client
+            
             </Tab>
             <Tab label="Metrics">
+            ⭐ Any Prometheus compatible Agent <br/>
             [Grafana Alloy](https://grafana.com/docs/alloy/latest/), 
             [Grafana Agent](https://grafana.com/docs/agent/latest/), 
             [Vector](https://vector.dev/), 
             [Opentelemetry](https://github.com/metrico/otel-collector)
-            <br/>⭐ Any Prometheus compatible client
+            
             </Tab>
             <Tab label="Traces">
+            ⭐ Any Tempo/Zipkin compatible Agent <br/>
             [Grafana Alloy](https://grafana.com/docs/alloy/latest/), 
             [Grafana Agent](https://grafana.com/docs/agent/latest/), 
             [Zipkin](https://zipkin.io/), 
             [Opentelemetry](https://github.com/metrico/otel-collector)
-            <br/>⭐ Any Tempo/Zipkin compatible client
+            
             </Tab>
             <Tab label="Profiles">
-            [Grafana Pyroscope](https://grafana.com/docs/pyroscope/latest/configure-client/language-sdks/), 
+            ⭐ Any Pyroscope compatible Agent <br/>
+            [Grafana Pyroscope SDK](https://grafana.com/docs/pyroscope/latest/configure-client/language-sdks/), 
             [Grafana Agent](https://grafana.com/docs/pyroscope/latest/configure-client/grafana-agent/go_pull/) 
-            <br/>⭐ Any pprof compatible client
+            
             </Tab>
       </Tabs>
 
